--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -30,21 +30,21 @@
             android:id="@+id/lblClinicos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Resultados clínicos automáticos:"
+            android:text="Resultados:"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="16dp" />
 
-        <TextView
-            android:id="@+id/txtClinicos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
+    <TextView
+        android:id="@+id/txtClinicos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
 
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
-        android:text="Esperando resultados automáticos..." />
+    android:textSize="14sp"
+    android:textColor="@android:color/black"
+    android:text="Esperando resultados automáticos..." />
 
-    <Button android:id="@+id/btnGuardar" android:text="Guardar reporte" android:layout_width="match_parent" android:layout_height="wrap_content" />
+<Button android:id="@+id/btnGuardar" android:text="Guardar reporte" android:layout_width="match_parent" android:layout_height="wrap_content" />
 </LinearLayout>
 </ScrollView>
